AP-497: Fixed expand / collapse issues

--- a/src/Modules/Settings/Dnn.PersonaBar.SiteSettings/SiteSettings.Web/src/components/ignoreWords/style.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.SiteSettings/SiteSettings.Web/src/components/ignoreWords/style.less
@@ -15,10 +15,7 @@
                 }
                 .header-row {
                     text-transform: uppercase;
-                    &:last-child {
-                        border-bottom: 0;
-                    }
-                    border-bottom: 1px solid @alto;
+                    border-bottom: 0;
                     padding: 10px 0 10px 0;
                     width: 100%;
                     float: left;
@@ -67,6 +64,7 @@
                             text-align: left;
                             .collapsible-label {
                                 height: 16px;
+                                width: auto;
                             }
                             .collapsible-content {
                                 text-align: left;
