--- a/src/Modules/Settings/Dnn.PersonaBar.SiteSettings/SiteSettings.Web/src/components/synonymsGroups/style.less
+++ b/src/Modules/Settings/Dnn.PersonaBar.SiteSettings/SiteSettings.Web/src/components/synonymsGroups/style.less
@@ -1,4 +1,3 @@
-
 @import "~dnn-global-styles/index";
 #siteSettings-container {
     .dnn-persona-bar-page-body {
@@ -12,6 +11,9 @@
                     border: solid 1px @alto;
                     float: left;
                     width: 100%;
+                    .row-new-item {
+                        border-bottom: none;
+                    }
                 }
                 .header-row {
                     &:last-child {
@@ -22,6 +24,10 @@
                     width: 100%;
                     float: left;
                     overflow: hidden;
+                }
+                .header-row-no-border {
+                    .header-row;
+                    border-bottom: 0;
                 }
                 .header-Synonyms {
                     width: 85%;
@@ -67,6 +73,7 @@
                             text-align: left;
                             .collapsible-label {
                                 height: 16px;
+                                width: auto;
                             }
                             .collapsible-content {
                                 text-align: left;
